# Illusion-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  premake5.lua
Editor/assets/shaders/: UIShader.glsl
Editor/logs/: log.txt
Editor/src/: CameraScript.h  Editor.cpp  EditorLayer.cpp  EditorLayer.h  StringDataComponent.h  Tracker.h
Editor/src/Panels/: LogPanel.cpp  LogPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Game/: imgui.ini
Game/assets/: map.txt
Game/assets/shaders/: TextureShader.glsl
Game/src/: Game.cpp  GameLayer.cpp  GameLayer.h  GameObject.cpp  GameObject.h  Level.cpp  Level.h  Map.cpp  Map.h  NPC.cpp  NPC.h  Player.cpp  Player.h  TestLayer.cpp  TestLayer.h  Tracker.h
Illusion/Lib/GLFW/: premake5.lua
Illusion/Lib/GLFW/bin-int/Debug-windows-x86_64/GLFW/GLFW.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Illusion/Lib/Glad/: CMakeLists.txt
Illusion/Lib/Glad/bin-int/Debug-windows-x86_64/Glad/Glad.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Glad.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Illusion/Lib/imgui/: ImGui.vcxproj  premake5.lua
Illusion/Lib/imgui/bin-int/Debug-windows-x86_64/ImGui/ImGui.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Illusion/src/: Engine.h  pch.cpp  pch.h
Illusion/src/Engine/Core/: Core.h  EntryPoint.h
Illusion/src/Engine/Core/Application/: Application.cpp  Application.h
Illusion/src/Engine/Core/ECS/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  Script.h
Illusion/src/Engine/Core/Input/: Input.cpp  Input.h  KeyCode.h  MouseCode.h  WindowsInput.cpp  WindowsInput.h
Illusion/src/Engine/Core/Layer/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Illusion/src/Engine/Core/Log/: Log.cpp  Log.h
Illusion/src/Engine/Core/Resource/: FileReader.cpp  FileReader.h  ResourceManager.h
Illusion/src/Engine/Core/Utils/: Random.cpp  Random.h  Timer.cpp  Timer.h  Timestep.cpp  Timestep.h
Illusion/src/Engine/Core/Utils/Parser/: ConfigParser.cpp  JsonParser.cpp  JsonParser.h
Illusion/src/Engine/Core/Utils/Resource/: FileReader.cpp  FileReader.h  ResourceManager.cpp  ResourceManager.h
Illusion/src/Engine/Core/Utils/Serialization/: ConfigParser.h  Serializer.cpp  Serializer.h
Illusion/src/Engine/Core/Window/: Window.cpp  Window.h  WindowsWindow.cpp  WindowsWindow.h
Illusion/src/Engine/Event/: AppEvent.h  Events.h  KeyEvent.h  MouseEvent.h
Illusion/src/Engine/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Illusion/src/Engine/Render/Animation/: SequenceAnimation.cpp  SequenceAnimation.h
Illusion/src/Engine/Render/CameraSystem/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h
Illusion/src/Engine/Render/ParticleSystem/: ParticleEmitter.cpp  ParticleEmitter.h  ParticleSystem.cpp  ParticleSystem.h
Illusion/src/Engine/Render/Renderer/: RenderCommand.cpp  RenderCommand.h  Renderer.h  Renderer2D.cpp  Renderer2D.h
Illusion/src/Engine/Render/Utils/: Buffers.cpp  Buffers.h  GraphicContext.cpp  GraphicContext.h  Shader.cpp  Shader.h  SubTexture.cpp  SubTexture.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Illusion/src/Engine/Renderer/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp
Illusion/src/Engine/Sound/: Soundplayer.cpp  Soundplayer.h
Scripts/: Clean_Up.bat  Clear.bat  GenProjects.bat  Publish.bat
